--- a/.github/workflows/notdb_gen.yml
+++ b/.github/workflows/notdb_gen.yml
@@ -12,5 +12,7 @@ jobs:
           token: ${{ secrets.GH_PAT || github.token }}
       - run: pip install requests
       - shell: bash
+        env:
+          token: ${{ secrets.GH_PAT || github.token }}
         run: >
-          python notdb.py
+          python notdb.py --gh-token "$token" --dev
