--- a/.github/workflows/mod.yml
+++ b/.github/workflows/mod.yml
@@ -18,4 +18,4 @@ jobs:
           report_api: ${{secrets.REPORT_API}}
           token: ${{ secrets.GH_PAT || github.token }}
         run: >
-          python main.py --get-mod-api "$mod_api" --update-nsfw-api "$nsfw_api" --get-report-nsfw-api "$report_api" --gh-token "$token" --dev
+          python main.py --get-mod-api "$mod_api" --update-nsfw-api "$nsfw_api" --get-report-nsfw-api "$report_api" --gh-token "$token"
