--- a/.github/workflows/notdb_gen.yml
+++ b/.github/workflows/notdb_gen.yml
@@ -15,4 +15,4 @@ jobs:
         env:
           token: ${{ secrets.GH_PAT || github.token }}
         run: >
-          python notdb.py --gh-token "$token" --dev
+          python notdb.py --gh-token "$token"
